@@ -1,0 +1,47 @@
+###
+# Errors
+###
+
+ERROR_BUILD_FAILED = 3
+ERROR_CURL_OPERATION_TIMEOUT = 28
+ERROR_GETOPT = 2
+ERROR_HELP = 1
+MISSING_SCRAPE_AND_DOWNLOAD = 7
+ERROR_MISSING_SECTION_KEY = 5
+ERROR_MISSING_VERSION_WHEN_SCRAPE = 6
+ERROR_NO_OPTIONS_SPECIFIED = 4
+ERROR_SUCCESS = 0
+
+###
+# Limits
+###
+
+NUM_MAX_REDIRECTIONS = 5
+NUM_SECONDS_PER_THREAD_JOIN = 0.2
+NUM_SECONDS_IN_DAY = 86400
+NUM_SECONDS_TO_TEST_DOWNLOAD = 3
+NUM_THREADS_PER_CURL_OBJECT = 2
+
+###
+# GUI Layout
+###
+
+CATEGORY_DROPDOWN_WIDTH = 150
+FILTER_BOX_HEIGHT = 19
+FILTER_BOX_WIDTH = 134
+GUI_WIDTH = 425
+GUI_HEIGHT = 590
+SECTION_HEIGHT = 50
+SECTION_HEIGHT_INCREMENT = 15
+TOOLBAR_WIDTH = 76
+TOP_MARGIN = 90
+
+###
+# Sleep Limits
+###
+
+SLEEP_GUI_SECTION_ACTION_DONE = 3
+SLEEP_GUI_DB_UPDATE_DONE = 3
+SLEEP_GUI_DB_UPDATE_STEP = 0.5
+SLEEP_GUI_ERROR_OUT = 3
+SLEEP_GUI_FILTER_SECTION_LIST = 0.1
